--- a/style.css
+++ b/style.css
@@ -4,23 +4,20 @@ body{
     text-align: center;
 }
 
-
-
-/*
-table{
-    background-color: aquamarine;
-    width: 100%;
-    height: auto;
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+}
+    
+.header h1{
+    display: inline;
+    padding: 20px;
 }
 
-table td{
-    padding: 10px;
-    margin: 10px;
-}
+.heading-logo{
+    width: 50px;
+    height: 50px;
 
-td:nth-child(1){
-    text-align: right;
 }
-td:nth-child(2){
-    text-align: left;
-}*/
